2010-09-02  Asa Ayers  <Asa.Ayers@Gmail.com>

- Updated the ArkInventory rule and tooltip to work in QA is compatible instead of if its enabled in ItemAuditor.
- Moved the check for QAManager so it doesn't interfere with the tooltip or ArkInventory rule.
- Update GetItemCost to return the total invested even if you have none of that item left. If you sell all of an item but are waiting for the mail to arrive, you can still see how much you have invested even though you don't actually own any more of that item.
- Changed Total Profit to Profit Each to match the rest of the interface. Cost and Estimated Sale are both Each.
- When using the process button for Enchanting, ItemAuditor will check which vellum is used and will use the vellum from your inventory. If the correct vellum is not found, it will upgrade to the next level (use vellum II instead of vellum I). This also means that you have to press process for each scroll to be created.
- Changed the Have Mats column to show the number of items you could create with the materials you have instead of just a y/n. The have mats filter simply checks that you can make at least 1.
- Ticket 33 - Implemented a persistent queue. This allows the crafting queue to be seen even if your tradeskills aren't open and allows you to mix all of your tradeskills into a single queue.

2010-09-01  Asa Ayers  <Asa.Ayers@Gmail.com>

- Made some changes to begin migrating some QA functionality to QAManager (http://www.wowace.com/addons/qa-manager/)
- Ticket 35 - I found a better solution to prevent bag scanning from interfering with mailing, so both can be done at the same time now.

2010-08-30  Asa Ayers  <Asa.Ayers@Gmail.com>

- Updated Total Cost in /ia crafting to include the AH cut based on the price column. This will also reduce the profit column to consider the additional cost.
- Added an absolute Auction Threshold option. This will allow you to set your threshold at 10g (or whatever you choose) over your cost for all items.
