@@ -1,3 +1,7 @@
+2010-09-03  Asa Ayers  <Asa.Ayers@Gmail.com>
+
+- Re-enabled IA QuickAuctions decider. I unintentionally disabled it when working on the QAManager code.
+
 2010-09-02  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Updated the ArkInventory rule and tooltip to work in QA is compatible instead of if its enabled in ItemAuditor.
